Refine pathway adornments and movement response